# mordor

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  README.md  build-image.sh  config.sample.toml  generate_entries.sh
migration/: Cargo.toml
migration/src/: m20220101_000001_create_table.rs
mordor-macros/: Cargo.toml
mordor-macros/src/: lib.rs
src/: errors.rs  logging.rs  main.rs  session.rs
src/_static/: login.html
src/controllers/: login.rs  mod.rs  structures.rs
src/controllers/modules/: basic_auth.rs  mod.rs  saml_auth.rs
src/database/: mod.rs
src/database/entity/: mod.rs
src/settings/: database.rs  http.rs  mod.rs
src/settings/modules/: mod.rs  saml.rs
src/utils/: defaults.rs  mod.rs
utilities/: add_user.py  generate_password.py  requirements.txt
