[package]
name = "mordor"
version = "0.1.0"
authors = ["rstular <rok@stular.eu>"]
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-session = { version = "0.8.0", features = ["cookie-session"] }
actix-web = "4.4.0"
actix-web-httpauth = "0.8.1"
anyhow = "1.0.75"
async-trait = "0.1.73"
clap = { version = "4.4.4", features = ["derive"] }
color-eyre = "0.6.2"
config = "0.13.3"
hex = { version = "0.4.3", features = ["serde"] }
lazy_static = "1.4.0"
migration = { path = "./migration" }
mordor-macros = { path = "./mordor-macros" }
reqwest = { version = "0.11.20", features = ["rustls", "cookies"], default-features = false }
rust-argon2 = { version = "2.0.0", features = ["serde"] }
sea-orm = { version = "0.12", features = [ "sqlx-sqlite", "runtime-tokio-rustls", "macros" ] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
tera = "1.19.1"
thiserror = "1.0.48"
time = { version = "0.3.28", features = ["serde"] }
tokio = { version = "1.32.0", features = ["full"] }
tracing = "0.1.37"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
url = { version = "2.4.1", features = ["serde"] }
