[package]
name = "mordor"
version = "0.1.0"
authors = ["rstular <rok@stular.eu>"]
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-session = { version = "0.9.0", features = ["cookie-session"] }
actix-web = "4.4.1"
actix-web-httpauth = "0.8.1"
anyhow = "1.0.79"
clap = { version = "4.4.18", features = ["derive"] }
color-eyre = "0.6.2"
config = "0.13.4"
hex = { version = "0.4.3", features = ["serde"] }
lazy_static = "1.4.0"
migration = { path = "./migration" }
mordor-macros = { path = "./mordor-macros" }
reqwest = { version = "0.11.23", features = ["rustls", "cookies"], default-features = false }
rust-argon2 = { version = "2.1.0", features = ["serde"] }
sea-orm = { version = "0.12", features = [ "sqlx-sqlite", "runtime-tokio-rustls", "macros" ] }
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
tera = "1.19.1"
thiserror = "1.0.56"
time = { version = "0.3.31", features = ["serde"] }
tokio = { version = "1.35.1", features = ["full"] }
tracing = "0.1.40"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
url = { version = "2.5.0", features = ["serde"] }
