[package]
name = "mordor-macros"
version = "0.1.0"
authors = ["rstular <rok@stular.eu>"]
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.67"
quote = "1.0.33"
syn = "2.0.37"
